# bin-expire

./: .cargoignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  archive_manifest.rs  archiver.rs  cli.rs  cli_help.rs  config.rs  fs_scanner.rs  main.rs  models.rs
src/analyzer/: mod.rs
src/archive_manifest/: mod.rs
src/cli/: help.rs  mod.rs
src/commands/: archive.rs  mod.rs  restore.rs  scan.rs
src/fs_scanner/: mod.rs
src/models/: mod.rs
src/ui/: mod.rs
tests/: integration_test.rs
