[package]
name = "bin-expire"
version = "0.1.0"
edition = "2021"

[dependencies]
# Standard CLI parser
clap = { version = "4.5", features = ["derive"] }

# High-performance directory traversal
walkdir = "2.5"

# System directory paths
dirs = "6.0"

# Easy error handling
anyhow = "1.0"

# Serialization for Config/Manifest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Human-readable time formatting
humantime = "2.1"

# Short date formatting (YYYY-MM-DD) for scan tables
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Config file format
toml = "0.9.8"

# Pretty table output
tabled = "0.20.0"
colored = "3.0.0"

[dev-dependencies]
# For faking file times in tests
filetime = "0.2.26"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }